# mobile-app

./: .gitignore  DYNAMIC_MEMORY_FIX_SUMMARY.md  LICENSE.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: abort_manager.rs  api.rs  chat_manager.rs  cost_calculator.rs  discovery.rs  embedding_model.rs  error.rs  lib.rs  llama_cpp.rs  logger.rs  migrations.rs  model_verify.rs  models_cache.rs  pricing_cache.rs  provider_config.rs  provider_verify.rs  secrets.rs  storage_manager.rs  tokenizer.rs  usage_commands.rs  usage_storage.rs  usage_tracking.rs  utils.rs
src-tauri/src/api/: helpers.rs  mod.rs
src-tauri/src/chat_manager/: commands.rs  dynamic_memory.rs  lorebook_matcher.rs  messages.rs  mod.rs  prompt_engine.rs  prompts.rs  provider_adapter.rs  request.rs  request_builder.rs  service.rs  sse.rs  storage.rs  tooling.rs  types.rs
src-tauri/src/content_filter/: dictionary.rs  mod.rs
src-tauri/src/creation_helper/: commands.rs  mod.rs  service.rs  tools.rs  types.rs
src-tauri/src/embedding_model/: benchmark.rs  download.rs  inference.rs  layout.rs  mod.rs  ort_runtime.rs  settings.rs  specs.rs  tests.rs  util.rs
src-tauri/src/group_chat_manager/: mod.rs  selection.rs
src-tauri/src/image_generator/: commands.rs  storage.rs  types.rs
src-tauri/src/models/: cache.rs  cost.rs  mod.rs  types.rs  verify.rs
src-tauri/src/persistence/: mod.rs  provider_credentials.rs
src-tauri/src/providers/: commands.rs  config.rs  mod.rs  openrouter.rs  util.rs  verify.rs
src-tauri/src/sync/: codec.rs  (+4 more)
(+306 files in other folders)
