[package]
name = "lettuceai"
version = "1.0.0-beta-4"
description = "LettuceAI mobile AI roleplaying app."
authors = ["MegalithOfficial"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lettuceai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
zeroize = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"] }
rand = "0.8"
blake3 = "1"
whoami = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-app-events = "0.2.0"
base64 = "0.22"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["macros", "rt", "time"] }
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
machine-uid = "0.3"
